Fix bug #35954 (Fatal com_exception casting object)